--- a/sunhomo-miniProgram/pages/activity/activities.wxml
+++ b/sunhomo-miniProgram/pages/activity/activities.wxml
@@ -1,29 +1,44 @@
 <view class="container">
 
-	<view class="banner" wx:if="{{ads.length>0}}">
-		<swiper indicator-dots="{{true}}" autoplay="{{true}}" interval="{{4000}}" duration="{{1000}}">
-			<block wx:for="{{ads}}">
-				<swiper-item>
-					<image src="{{item.adImg}}" class="slide-image" />
-				</swiper-item>
-			</block>
-		</swiper>
-	</view>
-
-	<view class="menu-list">
-		<block wx:for="{{activities}}" wx:for-item="activity">
-			<view class="menu-item">
-				<view class="menu-item-main" id="{{index}}" data-activity="{{activity}}" bindtap="enroll">
-					<text class="menu-item-name">{{activity.activityName}}
-					<br/>活动时间：{{activity.activityDate}} ({{activity.startTime}}-{{activity.endTime}})
-					<br/>活动地点：{{activity.place}} ({{activity.field}})
-					<br/>活动费用：{{activity.fee}}元/人
-					<br/>活动人数：{{activity.members.length}}/{{activity.numbers}}人<block wx:if="{{activity.activityType==1}}">（替补达4人视情况加场）</block>
-					</text>
-					<image class="menu-item-arrow " src="/images/arrowright.png">
-					</image>
-				</view>
-			</view>
+<view class="banner" wx:if="{{ads.length>0}}">
+	<swiper indicator-dots="{{true}}" autoplay="{{true}}" interval="{{4000}}" duration="{{1000}}">
+		<block wx:for="{{ads}}">
+			<swiper-item>
+				<image src="{{item.adImg}}" class="slide-image" />
+			</swiper-item>
 		</block>
-	</view>
+	</swiper>
+</view>
+
+<view class="menu-list">
+	<block wx:for="{{activities}}" wx:for-item="activity">
+		<view class="menu-item">
+			<view class="menu-item-main" id="{{index}}" data-activity="{{activity}}" bindtap="enroll">
+				<view>
+					<view class="menu-item-title">{{activity.activityName}}</view>
+					<view>
+							<view class="menu-line-box">
+								<text class="label">时间：</text>
+								<text>{{activity.activityDate}} ({{activity.startTime}}-{{activity.endTime}})</text>
+							</view>
+							<view class="menu-line-box">
+								<text class="label">地点：</text>
+								<text>{{activity.place}} ({{activity.field}})</text>
+							</view>
+							<view class="menu-line-box">
+								<text class="label">费用：</text>
+								<text>{{activity.fee}}元/人</text>
+							</view>
+							<view class="menu-line-box">
+								<text class="label">人数：</text>
+								<text>{{activity.members.length}}/{{activity.numbers}}人<block wx:if="{{activity.activityType==1}}">（替补达4人视情况加场）</block></text>
+							</view>
+					</view>
+				</view>
+				<image class="menu-item-arrow " src="/images/arrowright.png">
+				</image>
+			</view>
+		</view>
+	</block>
+</view>
 </view>
