--- a/sunhomo-miniProgram/pages/activity/activities.wxss
+++ b/sunhomo-miniProgram/pages/activity/activities.wxss
@@ -1,23 +1,24 @@
 .menu-list {
   display: flex;
   flex-direction: column;
-  background-color: #fbf9fe;
-  margin-top: 5rpx;
+  margin-top: 4rpx;
 }
 .menu-item {
   color: #000000;
   display: flex;
-  background-color: #fff;
-  margin: 5rpx 0rpx;
+  margin: 4rpx 0rpx;
   flex-direction: column;
 }
 .menu-item-main {
   display: flex;
-  padding: 20rpx;
+  margin: 5rpx 10rpx;
+  padding: 20rpx 20rpx;
   border-radius: 5rpx;
   align-items: center;
-  font-size: 32rpx;
+  font-size: 28rpx;
   justify-content: space-between;
+  box-shadow: 1rpx 4rpx 4rpx rgba(0,0,0,.1);
+  background:#fff;
 }
 .menu-item-arrow {
   width: 32rpx;
@@ -36,4 +37,21 @@
   display:block;
   width:100%;
   height:100%;
+}
+.menu-line-box{
+  display: flex;
+  line-height: 1.5;
+  font-weight: bold;
+}
+.label{
+  width:3em;
+}
+.menu-item-title{
+  font-size:32rpx;
+  font-weight: bold;
+  margin-bottom: 20rpx;
+}
+page{
+  background:#f1f1f1;
+  min-height: 100%;
 }
