报名列表页样式调整

--- a/sunhomo-miniProgram/pages/activity/activity.wxss
+++ b/sunhomo-miniProgram/pages/activity/activity.wxss
@@ -68,7 +68,7 @@ page{
   font-size:20rpx;
 }
 .member_name{
-  width:9em;
+  width:255rpx;
   overflow: hidden;
   white-space: nowrap;
   text-overflow:ellipsis;
