增加约战次数限制

--- a/sunhomo-java/club_admin/src/main/resources/templates/club/member/member.html
+++ b/sunhomo-java/club_admin/src/main/resources/templates/club/member/member.html
@@ -23,6 +23,10 @@
                                 </select>
                             </li>
                             <li>
+                                OPENID：<input type="text" name="openid"/>
+                                </select>
+                            </li>
+                            <li>
                                 是否黑名单：<select name="isBlack">
                                 <option value="">所有</option>
                                 <option value="1">黑名单</option>
