--- a/sunhomo-miniProgram/pages/battle/battles.wxml
+++ b/sunhomo-miniProgram/pages/battle/battles.wxml
@@ -176,7 +176,7 @@
       2、其他人员实时积分大于3点，可应战，暂扣3点（ 盲盒模式为1点）实时积分；
       3、如果您有未成团的约战，无法发起新的约战或应战；
       4、有未成团的盲盒约战，不能发起新的盲盒约战。成团的盲盒约战在活动当天显示人员，未成团的盲盒约战活动当天自动取消；
-      5、单次活动每人限报三场约战
+      5、单次活动每人限报一场暗盒约战、一场普通约战；
       6、活动第二天，系统将根据约战成绩，自动累积积分（胜者每人获得相应积分，负者扣除相应积分）
 
       打CALL规则
