单次活动限定10场约战

--- a/sunhomo-java/club_admin/src/main/resources/templates/club/member/member.html
+++ b/sunhomo-java/club_admin/src/main/resources/templates/club/member/member.html
@@ -144,7 +144,7 @@
                 {
                     title: '约战胜率',
                     formatter: function (value, row, index) {
-                        return row.ratio / 100 + '%(' + row.winNumber + '/' + row.loseNumber + ')';
+                        return row.ratio / 100 + '%(' + row.winNumber + '/' + (row.winNumber + row.loseNumber) + ')';
                     }
                 },
                 {
