解决多活动切换时，暗盒CHECKBOX的BUG

--- a/sunhomo-miniProgram/pages/battle/battle.wxml
+++ b/sunhomo-miniProgram/pages/battle/battle.wxml
@@ -51,7 +51,7 @@
   </view>
   <view style="margin:20rpx;font-weight:blod" wx:if="{{canBlind}}">
     <checkbox-group bindchange="bindIsBlindChange">
-      <checkbox value="1"></checkbox><image class="look_icon" src="/images/look.png" alt=""></image> 开启盲盒模式（一局定胜负）
+      <checkbox value="1" checked="{{blindCheck}}"></checkbox><image class="look_icon" src="/images/look.png" alt=""></image> 开启盲盒模式（一局定胜负）
     </checkbox-group>
   </view>
   <view style="text-align:center;margin-top:10rpx;">
