--- a/sunhomo-miniProgram/pages/battle/battles.wxml
+++ b/sunhomo-miniProgram/pages/battle/battles.wxml
@@ -35,7 +35,7 @@
                   <image class="icon-win left" src="/images/win.png" alt=""></image>
                 </block>
                 <view wx:if="{{battle.a1Name}}">
-                  <view wx:if="{{userInfo.isAdmin>0}}">
+                  <view wx:if="{{userInfo.isAdmin>0 && battle.isBlind==-1}}">
                     <view bindtap="quit" data-quiter="{{battle.a1}}" data-quitername="{{battle.a1Name}}" data-position="A1"
                       data-battleid="{{battle.battleId}}">
                       <view
@@ -54,7 +54,7 @@
                 <view wx:else><button type="primary" size="mini" data-postion="a1" data-battleid="{{battle.battleId}}"
                     bindtap="accept" style="margin-top:10rpx;">应战</button></view>
                 <view wx:if="{{battle.a2Name}}">
-                  <view wx:if="{{userInfo.isAdmin>0}}">
+                  <view wx:if="{{userInfo.isAdmin>0 && battle.isBlind==-1}}">
                     <view bindtap="quit" data-quiter="{{battle.a2}}" data-quitername="{{battle.a2Name}}" data-position="A2"
                       data-battleid="{{battle.battleId}}">
                       <view
@@ -79,7 +79,7 @@
                   <image class="icon-win right" src="/images/win.png" alt=""></image>
                 </block>
                 <view wx:if="{{battle.b1Name}}">
-                  <view wx:if="{{userInfo.isAdmin>0}}">
+                  <view wx:if="{{userInfo.isAdmin>0 && battle.isBlind==-1}}">
                     <view bindtap="quit" data-quiter="{{battle.b1}}" data-quitername="{{battle.b1Name}}" data-position="B1"
                       data-battleid="{{battle.battleId}}">
                       <view
@@ -98,7 +98,7 @@
                 <view wx:else><button type="primary" size="mini" data-postion="b1" data-battleid="{{battle.battleId}}"
                     bindtap="accept">应战</button></view>
                 <view wx:if="{{battle.b2Name}}">
-                  <view wx:if="{{userInfo.isAdmin>0}}">
+                  <view wx:if="{{userInfo.isAdmin>0 && battle.isBlind==-1}}">
                     <view bindtap="quit" data-quiter="{{battle.b2}}" data-quitername="{{battle.b2Name}}" data-position="B2"
                       data-battleid="{{battle.battleId}}">
                       <view
@@ -171,15 +171,20 @@
     <button type="primary" size="mini" bindtap="battle">发起约战</button>
   </view>
   <view style="margin:10rpx;font-size: 32rpx;">
-    <text>约战规则
-      1、发起人实时积分大于3点，可发起约战（无须填满4人），暂扣3点（ 盲盒模式为1点）实时积分；
-      2、其他人员实时积分大于3点，可应战，暂扣3点（ 盲盒模式为1点）实时积分；
-      3、单次活动有未成团的盲盒约战，不能发起新的盲盒约战。成团的盲盒约战在活动当天显示人员，未成团的盲盒约战活动当天自动取消；
-      4、单次活动每人限报一场暗盒约战、一场普通约战；
-      5、活动第二天，系统将根据约战成绩，自动累积积分（胜者每人获得相应积分，负者扣除相应积分）
+    <text>普通约战规则
+      1、发起人实时积分大于3点，可发起约战（无须填满4人），暂扣3点实时积分；
+      2、其他人员实时积分大于3点，可应战，暂扣3点实时积分；
+      3、三局两胜制，单次活动每人限一场约战；
+      4、活动第二天，系统将根据约战成绩，自动累积积分（胜者每人获得相应积分，负者扣除相应积分）
+
+      盲盒约战规则
+      1、实时积分大于3点可报名盲盒约战，加入盲盒约战池，暂扣1点实时积分，报名截止时间为活动当天0点
+      2、活动当天0点，系统自动取报名前4x人，随机配对，组建盲盒约战。
+      3、一局定胜负，单次活动每人限一场盲盒约战；
+      4、活动第二天，系统将根据约战成绩，自动累积积分（胜者每人获得相应积分，负者扣除相应积分）
 
       打CALL规则
-      1、系统每周会选择一组“基情四射”的约战，开放打CALL功能；
+      1、系统不定期选择一组“基情四射”的约战，开放打CALL功能；
       2、场外人员可选择支（an）持（lian）的一方进行打CALL，暂扣1点实时积分
       3、活动第二天，系统自动累积积分（猜对者获得1点实时积分，猜错者扣掉1点实时积分）
     </text>
