修改盲盒约战规则，活动当天随机分配

--- a/sunhomo-miniProgram/pages/battle/battles.wxml
+++ b/sunhomo-miniProgram/pages/battle/battles.wxml
@@ -178,8 +178,8 @@
       4、活动第二天，系统将根据约战成绩，自动累积积分（胜者每人获得相应积分，负者扣除相应积分）
 
       盲盒约战规则
-      1、实时积分大于3点可报名盲盒约战，加入盲盒约战池，暂扣1点实时积分，报名截止时间为活动当天0点
-      2、活动当天0点，系统自动取报名前4x人，随机配对，组建盲盒约战。
+      1、实时积分大于3点可报名盲盒约战，加入盲盒约战池，报名截止时间为活动当天0点
+      2、活动当天0点，系统自动取报名前4x人，随机配对，组建盲盒约战，每人暂扣1点实时积分。
       3、一局定胜负，单次活动每人限一场盲盒约战；
       4、活动第二天，系统将根据约战成绩，自动累积积分（胜者每人获得相应积分，负者扣除相应积分）
 
