--- a/sunhomo-miniProgram/pages/activity/activities.wxml
+++ b/sunhomo-miniProgram/pages/activity/activities.wxml
@@ -31,7 +31,7 @@
 							</view>
 							<view  wx:if="{{activity.activityType==1}}" class="menu-line-box">
 								<text class="label">人数：</text>
-								<text>{{activity.members.length}}/{{activity.numbers}}人 ({{activity.blindMembers.length}}人报名盲盒约战)</text>
+								<text>{{activity.members.length}}/{{activity.numbers}}人 <block wx:if="{{activity.blindMembers.length>0}}">(盲盒约战池:{{activity.blindMembers.length}}人)</block></text>
 							</view>
 							<view wx:else class="menu-line-box">
 								<text class="label">人数：</text>
