--- a/sunhomo-miniProgram/pages/battle/battles.wxml
+++ b/sunhomo-miniProgram/pages/battle/battles.wxml
@@ -172,21 +172,21 @@
   </view>
   <view style="margin:10rpx;font-size: 32rpx;">
     <text>普通约战规则
-      1、发起人实时积分大于3点，可发起约战（无须填满4人），暂扣3点实时积分；
-      2、其他人员实时积分大于3点，可应战，暂扣3点实时积分；
+      1、发起人消费积分大于3点，可发起约战（无须填满4人），暂扣3点消费积分；
+      2、其他人员消费积分大于3点，可应战，暂扣3点消费积分；
       3、三局两胜制，单次活动每人限一场约战；
       4、活动第二天，系统将根据约战成绩，自动累积积分（胜者每人获得相应积分，负者扣除相应积分）
 
       盲盒约战规则
-      1、实时积分大于3点可报名盲盒约战，加入盲盒约战池，报名截止时间为活动当天0点
-      2、活动当天0点，系统自动取报名前4x人，随机配对，组建盲盒约战，每人暂扣1点实时积分。
+      1、消费积分大于3点可报名盲盒约战，加入盲盒约战池，报名截止时间为活动当天0点
+      2、活动当天0点，系统自动取报名前4x人，随机配对，组建盲盒约战，每人暂扣1点消费积分。
       3、一局定胜负，单次活动每人限一场盲盒约战；
       4、活动第二天，系统将根据约战成绩，自动累积积分（胜者每人获得相应积分，负者扣除相应积分）
 
       打CALL规则
       1、系统不定期选择一组“基情四射”的约战，开放打CALL功能；
-      2、场外人员可选择支（an）持（lian）的一方进行打CALL，暂扣1点实时积分
-      3、活动第二天，系统自动累积积分（猜对者获得1点实时积分，猜错者扣掉1点实时积分）
+      2、场外人员可选择支（an）持（lian）的一方进行打CALL，暂扣1点消费积分
+      3、活动第二天，系统自动累积积分（猜对者获得1点消费积分，猜错者扣掉1点消费积分）
     </text>
   </view>
 </view>
